--- a/frameset1.html
+++ b/frameset1.html
@@ -3,7 +3,7 @@
               <title> Frameset demo </title>
         </head>
         <frameset cols="50%,50%">
-         <frame name="frame1" src="frame1.html"/>
+         <frame name="frame1" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main.zip/new3-main/frame1.html"/>
               <frameset rows="50%,50%">
                   <frame name="frame2" src="frame2.html"/>
                     <frame name="frame3" src="frame3.html"/>
