--- a/frameset4.html
+++ b/frameset4.html
@@ -3,11 +3,11 @@
               <title> Frameset demo4 </title>
         </head>
         <frameset rows="30%,70%">
-           <frame name="frame6" src="frame6.html"/>
+           <frame name="frame6" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame6.html"/>
            <frameset cols="33%,34%,*">
-            <frame name="frame1" src="frame7.html"/>
-            <frame name="frame2" src="frame8.html"/>
-            <frame name="frame3" src="frame9.html"/>
+            <frame name="frame1" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame7.html"/>
+            <frame name="frame2" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame8.html"/>
+            <frame name="frame3" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame9.html"/>
            </frameset>
          <noframes>
                   <body>
