--- a/frameset1.html
+++ b/frameset1.html
@@ -3,9 +3,9 @@
               <title> Frameset demo </title>
         </head>
         <frameset cols="50%,50%">
-         <frame name="frame1" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main.zip/new3-main/frame1.html"/>
+         <frame name="frame1" src="https://google.com"/>
               <frameset rows="50%,50%">
-                  <frame name="frame2" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame2.html"/>
+                  <frame name="frame2" src="https://google.com"/>
                     <frame name="frame3" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame3.html"/>
               </frameset>
             <noframes>
