--- a/frameset1.html
+++ b/frameset1.html
@@ -3,10 +3,10 @@
               <title> Frameset demo </title>
         </head>
         <frameset cols="50%,50%">
-         <frame name="frame1" src="https://google.com"/>
+         <frame name="frame1" src="frame1.html"/>
               <frameset rows="50%,50%">
-                  <frame name="frame2" src="https://google.com"/>
-                    <frame name="frame3" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame3.html"/>
+                  <frame name="frame2" src="fram2.html"/>
+                    <frame name="frame3" src="frame3.html"/>
               </frameset>
             <noframes>
                   <body>
