--- a/frameset2.html
+++ b/frameset2.html
@@ -3,12 +3,12 @@
               <title> Frameset demo2 </title>
         </head>
         <frameset cols="30%,40%,*">
-         <frame name="frame1" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main.zip/new3-main/frame1.html"/>
+         <frame name="frame1" src="frame1.html"/>
               <frameset rows="50%,50%">
-                  <frame name="frame2" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame2.html"/>
-                    <frame name="frame3" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame3.html"/>
+                  <frame name="frame2" src="frame2.html"/>
+                    <frame name="frame3" src="frame3.html"/>
               </frameset>
-           <frame name="frame4" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame4.html"/>
+           <frame name="frame4" src="frame4.html"/>
            <noframes>
                   <body>
                    this browser don't support frameset
