--- a/frameset3.html
+++ b/frameset3.html
@@ -3,10 +3,10 @@
               <title> Frameset demo-3 </title>
         </head>
         <frameset cols="50%,50%">
-         <frame name="frame5" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame5.html"/>
+         <frame name="frame5" src="frame5.html"/>
               <frameset rows="50%,50%">
-                  <frame name="frame1" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame7.html"/>
-                    <frame name="frame2" src="file:///C:/Users/hp/AppData/Local/Temp/Temp1_new3-main%20(2).zip/new3-main/frame8.html"/>
+                  <frame name="frame1" src="frame7.html"/>
+                    <frame name="frame2" src="frame8.html"/>
               </frameset>
              <noframes>
                   <body>
